2006-08-04

	* src/sylpheed.rc.in
	  src/Makefile.am
	  configure.in: generate sylpheed.rc from sylpheed.rc.in.

2006-08-03

	* configure.in: fixed a bug that $LIBS was not properly restored
	  when OpenSSL test failed (thanks to IWAMOTO Kouichi).

2006-08-03

	* libsylph/filter.c
	  src/about.c
	  src/prefs_filter_edit.c
	  configure.in: Oniguruma can be used instead of system's regex API
	  (thanks to IWAMOTO Kouichi).

2006-08-02

	* src/sumaryview.c:
	  summary_filter_func()
	  summary_filter_junk_func(): fixed a bug that flag changes were not
	  saved with manual filtering.

2006-07-31

	* version 2.2.7

2006-07-31

	* src/folderview.c: folderview_menu_popup(): enable some menu items
	  on receiving.
	* libsylph/procmsg_empty_trash(): check whether the folder is really
	  trash.

2006-07-28

	* src/rfc2015.c: sig_status_for_key(): check the error of
	  gpgme_get_key() (fixes crashes on checking signature).

2006-07-28

	* src/compose.c
	  src/messageview.c
	  src/prefs_common_dialog.c
	  src/mainwindow.c: added Windows-1257 encoding for Baltic.

2006-07-27

	* libsylph/md5_hmac.c: md5_hex_hmac(): fixed a memory leak.

2006-07-26

	* src/compose.c: compose_reply_set_entry(): use original address
	  strings instead of stripped ones. Fixed a bug that To: address
	  was duplicated in Cc: on reply-to-all.

2006-07-25

	* libsylph/prefs_common.[ch]
	  src/inc.c
	  src/prefs_common_dialog.c: added an option to filter junk mails
	  before normal filtering.

2006-07-24

	* src/summaryview.c: added 'Set as (not) junk mail' to the context
	  menu.

2006-07-21

	* src/summaryview.c: summary_filter_real(): fixed a bug that manual
	  junk filtering didn't work when no filter rule exist.

2006-06-27

	* po/tr.po: fixed a typo which caused crash.

2006-06-26

	* src/gtkutils.[ch]: gtkut_tree_view_fast_clear(): new.
	* src/summaryview.c: made workarounds for the crash in GTK+ 2.8.x.

2006-06-25

	* libsylph/mh.c: mh_scan_tree_recursive(): win32: improved its
	  performance.