@@ -1,1 +1,30 @@
+1 VERSIONINFO
+ FILEVERSION @MAJOR_VERSION@,@MINOR_VERSION@,@MICRO_VERSION@,@BUILD_REVISION@
+ PRODUCTVERSION @MAJOR_VERSION@,@MINOR_VERSION@,@MICRO_VERSION@,0
+ FILEFLAGSMASK 0x3fL
+ FILEFLAGS 0x20L
+ FILEOS 0x40004L
+ FILETYPE 0x1L
+ FILESUBTYPE 0x0L
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904b0"
+        BEGIN
+            VALUE "CompanyName", "Hiroyuki Yamamoto\0"
+            VALUE "FileDescription", "Sylpheed\0"
+            VALUE "FileVersion", "@MAJOR_VERSION@.@MINOR_VERSION@.@MICRO_VERSION@.@BUILD_REVISION@\0"
+            VALUE "InternalName", "sylpheed\0"
+            VALUE "LegalCopyright", "Copyright (C) 1999-2006 Hiroyuki Yamamoto\0"
+            VALUE "OriginalFilename", "sylpheed.exe\0"
+            VALUE "ProductName", "Sylpheed\0"
+            VALUE "ProductVersion", "@VERSION@\0"
+        END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x409, 1200
+    END
+END
+
 SYLPHEED ICON icons/sylpheed.ico
