@@ -1,6 +1,11 @@
 2006-08-04
 
 	* src/sylpheed.rc.in
+	  configure.in: added version information.
+
+2006-08-04
+
+	* src/sylpheed.rc.in
 	  src/Makefile.am
 	  configure.in: generate sylpheed.rc from sylpheed.rc.in.
 
